style.css
*{
margin:0;
padding:0;
font-family: poppins,sans-serif;
box-sizing:border-box;
}

body{
color:#fff;
background:#011c42;
}
#header{
    top:0;
    left:0;
    width:100%;
    height:100vh;
    position:relative;
    padding:0 5%; 
    display:flex;
    align-items:center;
    justify-content:center;    
}

nav{ 
    width:100%;
    top:0;
    left:0;
    position:absolute;
    padding:20px 8%;
    display:flex;
    align-items: center;
    justify-content: space-between;
}

.logo{
 width:200px;
}


.video{
    position:absolute;
    right:0;
    bottom:0;
    z-index:-1;
    }

@media(min-aspect-ratio: 16/9)
{
    .video{
        width:100%;
        height:auto;
    }
}
@media(max-aspect-ratio: 16/9)
{
    .video{
        width:auto;
        height:100%; 
        }
}
nav ul li{
    list-style:none;
    display: inline-block; 
    margin-top:10px;
    margin-left:20px;       
}
nav ul li a {
     color:hsl(0, 0%, 0%);
     text-decoration: none;
     font-size: 18px; 
}

nav ul li a::after{
    content:'';
    width:0;
    height:2px;
    background:hsl(47, 100%, 51%);
    left:0;
    bottom:-6px;
    transition: 0.5s;  
}

nav ul li a:hover::after
{

    width:100%;
}


.container
{
    padding:10px 10%;
}

#about{
    padding:80px 0;
}
.row{
    display:flex;
    justify-content:space-between;
    flex-wrap:wrap;
}
.about-col1 {
    flex-basis: 35%;
}

.about-col1 img{
    width:100%;
    border-radius:15px;

}

.about-col2{   
    flex-basis:60%;
}

.sub-title{
     
    font-size:60px;
    font-weight:600;
    color:#ffffff;
    padding:10px;
}
.tab-title
{
   display:flex;
   margin: 20px 0 40px;
}
.tab-link {
    margin-right:50px;
    font-size:18px;
    font-weight:500;
    cursor:pointer;
    position:relative;
}

.tab-link ::after
{
   content:'';
   width:0;
   height:3px;
   background-color:hsl(48, 100%, 51%); 
   position:absolute;
   left:0;
   bottom:-8px; 
   transition:0.5s;
}
.tab-link.active-link::after{
    width:50%;
}

.tab-content ul li {
    list-style:none;
    margin:10 px 0;
}

.tab-content {
    display:none;
}
.tab-content.active-tab{
    display:block; 
}
/* ---- services----*/
#services{
    padding : 20px 0;
}
.service-list{
    display:grid;

   grid-template-columns:repeat(auto-fit,minmax(350px,0));
   grid-gap:40px;
   margin-top:50px;
} 
.service-list div{

    background:#262626;
    padding:40px;
    font-size:14px;
    font-weight:300;
    border-radius:10px;
    transition: 0.9s;

 
}

.service-list div i {
 font-size:50px;
 margin-bottom:30PX;
}

.service-list div h2
{
    font-size:30px;
    font: weight 200px;
    margin-bottom:15px;
}

.service-list div a
{   text-decoration:none;
    font-size:12px;
    color:#ffffff;
    display:inline-block;

}

.service-list div:hover{
    background:hsl(221, 100%, 51%);
    transform:translateY(-10px);
}

   .work-list{
  
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(350px,0));
    grid-gap:40px;
    margin-top:50px;

}

.work {
    
    border-radius:10px;
    position:relative;
    overflow:hidden;
}

.work img{
    width:100%;
    border-radius:10 px;
    height:380px;  
    display:block;
    transition:transform 0.5s;
    
} 

.layer{
    width:100%;
    height:0;
    background:linear-gradient(rgba(0,0,0,0.6), hsl(212, 100%, 51%));
    position:absolute;
    left:0;
    bottom:0;
    overflow:hidden;
    display:flex;
    align-items:center;
    justify-content:center;
    flex-direction:column;
     padding:0 40px;
    text-align:center;
    font-size: 14 px;
    transition: height 0.5s; 
}
.layer h3
{
    font-weight:500;
    margin-bottom:20px;
}

.layer a{
margin-top:20px;
color: #fff;
text-decoration: none;
font-size:18px;
line-height:60px;
/   background:#01143a;
width:60px;
height:60px;
border-radius:50%;

} 

.work:hover img{
   transform:scale(1.1); 
}
.work:hover .layer
{
    height:100%;
}
.btn{
    display:block;
    margin:50px auto;
    width:fit-content;
    border:1px solid #fff;
    padding:14px 50px;
    border-radius:6px;
    color:#fff;
    text-decoration:none;
    transition: 0.5s;
   
}

.btn:hover{
    background: hsl(212, 100%,51%);

}
/*---contaccct form---*/
.contact-left{
    flex-basis:35%;

}
.contact-right{
    flex-basis:60%;
}

.contact-left p{

     margin-top:30px;
}

.contact-left p i {
    color:#ababab;
    margin-right : 15px;
    font-size: 25px;
 
}

.social-icons{
    margin-top:30px;

}

.social-icons a{
    text-decoration:none;
    margin-right:15px;
    font-size:30px;
    color:#ababab;
    display:inline-block;
    transition:transform 0.5s;
}

.social-icons a:hover{
    color: hsl(212, 100%,51%);
    transform:translateY(-5px);
}
.btn.btn2  {
    display:inline-block;
    background: hsl(212, 87%, 12%);
}
.btn.btn2:hover{
    background: hsl(212, 100%,51%);
}
.contact-right form
{
width:100%;
}

form input,textarea{
width:80%;
border:0;
outline:none;
background: hsl(180, 20%, 99%);
padding:15px;
margin: 15px 0;
color:#333;
font-size:18px;
border-radius:8px;

}

form .btn2{
    padding:14px 60px;
    font-size:18px;
    margin-top:20px;
    cursor:pointer;
}
.copyright{
    width:100%;
    text-align:center;
    padding:25px 0;
    background:#262626;
    font-weight:300px;
    margin-top:20px;
}

